@@ -1,6 +1,6 @@
 #!/usr/local/bin/perl -pi
 
-s/\\penalty \\@M \\ /\\verb\$~\$/g;
+s/\\penalty \\\@M \\ /\\verb\$~\$/g;
 s/\\unhbox.*\\leftarrow.*\\ninit /\\get{/g;
 s/\\unhbox.*\\rightarrow.*\\ninit /\\send{/g;
 s/\\unhbox.*\\leftarrow.*\\pit /\\get{/g;
@@ -10,5 +10,5 @@ s/\\unhbox.*\\leftarrow.*\\it +/\\get{/g;
 s/\\unhbox[^}]*\\hrule[^}]*}/_/g;
 s/\\relax +\\_/\\_/g;
 s/{\\accent "7E \/}/~/g;
-s/(\[\d+),(\d+\])/\1{,}\2/g;
+s/(\[\d+),(\d+\])/\1\{,\}\2/g;
 
