@@ -12,7 +12,7 @@ sub printTeX
   s/(^|[^\w}])@(\w+)/\1\\index{@\2}\\objectname{\2}/g;
   s/<(\w[-~\w]*)>/\\bnfmeta{\1}/g;
   s/\\class{([<\\=>]*)}/\\verb!\1!/g;
-  s/==>/\$\\longrightarrow$/g;
+  s/==>/\$\\longrightarrow\$/g;
   s/^(\s *\\sendmethod\{.*\}) *$/\1%/;
   s/^(\s *\\getmethod\{.*\}) *$/\1%/;
   s/^(\s *\\bothmethod\{.*\}) *$/\1%/;
