@@ -244,7 +244,7 @@ sub printCode
     } elsif ( /^(\w+)\s*:-/ )
     { print "\\index{$1\/0}";
     } elsif ( /@(\w+)/ )
-    { print "\\index{@$1}";
+    { print "\\index{\@$1}";
     } 
 
     $lineno++;
